Adding github workflows

--- a/ritesh_cv.tex
+++ b/ritesh_cv.tex
@@ -78,12 +78,12 @@
   \textbf{\Large Ritesh Bachhar}\\
   Graduate Student, University of Rhode Island\\
   Email :  riteshbachhar@uri.edu, riteshbachhar@gmail.com\\
-  Website: \href{www.riteshbachhar.com}{riteshbachhar.com}\\
+  Website: \href{www.riteshbachhar.com}{www.riteshbachhar.com}\\
 \end{tabular*}
 
 %----------- INTRO--------------------%
 \section{Research Interest}
-General relativity (GR), Surrogate models of gravitational waves, Gravitational wave modeling and Inference, Black hole merger phenomenology
+General relativity, Surrogate models of gravitational waves, Gravitational wave modeling and Inference, Black hole merger phenomenology
 
 
 %-----------EDUCATION-----------------
