--- a/ritesh_cv.tex
+++ b/ritesh_cv.tex
@@ -8,6 +8,7 @@
 
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
+%\usepackage[margin=1in]{geomery}
 \usepackage{titlesec}
 \usepackage{marvosym}
 \usepackage[usenames,dvipsnames]{color}
