--- a/ritesh_cv.tex
+++ b/ritesh_cv.tex
@@ -39,7 +39,7 @@
 % -------- Primary Color Definition --------
 \definecolor{primaryColor}{RGB}{0, 79, 144} % Define the primary color for consistent styling
 
-% Ensure that generate pdf is machine readable/ATS parsable:
+% -------- Machine-Readable PDF Settings --------
 \ifPDFTeX
     \input{glyphtounicode}
     \pdfgentounicode=1
@@ -48,48 +48,43 @@
     \usepackage{lmodern}
 \fi
 
-\usepackage[default, type1]{sourcesanspro} 
+\usepackage[default, type1]{sourcesanspro}    % Use Source Sans Pro font
 
-% Some settings:
-\AtBeginEnvironment{adjustwidth}{\partopsep0pt} % remove space before adjustwidth environment
-\pagestyle{empty} % no header or footer
-\setcounter{secnumdepth}{0} % no section numbering
-\setlength{\parindent}{0pt} % no indentation
-\setlength{\topskip}{0pt} % no top skip
-\setlength{\columnsep}{0.15cm} % set column seperation
+% -------- General Settings --------
+\AtBeginEnvironment{adjustwidth}{\partopsep0pt}         % Remove space before adjustwidth
+\pagestyle{empty}                                       % No header or footer
+\setcounter{secnumdepth}{0}                             % No section numbering
+\setlength{\parindent}{0pt}                             % No paragraph indentation
+\setlength{\topskip}{0pt}                               % No top skip
+\setlength{\columnsep}{0.15cm}                          % Column seperation
+
+% -------- Footer Customization --------
 \makeatletter
-\let\ps@customFooterStyle\ps@plain % Copy the plain style to customFooterStyle
+\let\ps@customFooterStyle\ps@plain                      % Copy the plain style to customFooterStyle
 \patchcmd{\ps@customFooterStyle}{\thepage}{
-    \color{gray}\textit{\small John Doe - Page \thepage{} of \pageref*{LastPage}}
-}{}{} % replace number by desired string
+    \color{gray}\textit{\small Ritesh Bachhar - Page \thepage{} of \pageref*{LastPage}}
+}{}{}
 \makeatother
-\pagestyle{customFooterStyle}
+\pagestyle{customFooterStyle}                           % Apply the custom footer style
 
+% -------- Section Title Formatting --------
 \titleformat{\section}{
-    % avoid page braking right after the section title
-    \needspace{4\baselineskip}
-    % make the font size of the section title large and color it with the primary color
-    \Large\color{primaryColor}
+    \needspace{4\baselineskip}                          % Avoid page break after title
+    \Large\color{primaryColor}                          % Large, primary-colored text
 }{
 }{
 }{
     % print bold title, give 0.15 cm space and draw a line of 0.8 pt thickness
     % from the end of the title to the end of the body
     \textbf{#1}\hspace{0.15cm}\titlerule[0.8pt]\hspace{-0.1cm}
-}[] % section title formatting
+}[] 
 
-\titlespacing{\section}{
-    % left space:
-    -1pt
-}{
-    % top space:
-    0.3 cm
-}{
-    % bottom space:
-    0.2 cm
-} % section title spacing
+% -------- Section Title Spacing --------
+\titlespacing{\section}{-1pt}{0.3 cm}{0.2 cm}           % left space, top space, bottom space
 
-% \renewcommand\labelitemi{$\vcenter{\hbox{\small$\bullet$}}$} % custom bullet points
+
+% -------- Custom Bullet Point Formatting --------
+% New environment for highlights
 \newenvironment{highlights}{
     \begin{itemize}[
         topsep=0.10 cm,
@@ -100,8 +95,9 @@
     ]
 }{
     \end{itemize}
-} % new environment for highlights
+}
 
+% New environment for highlights for bullet entries
 \newenvironment{highlightsforbulletentries}{
     \begin{itemize}[
         topsep=0.10 cm,
@@ -112,9 +108,10 @@
     ]
 }{
     \end{itemize}
-} % new environment for highlights for bullet entries
+}
 
-
+% -------- Custom Environments --------
+% New environment for one column entries
 \newenvironment{onecolentry}{
     \begin{adjustwidth}{
         0.2 cm + 0.00001 cm
@@ -123,8 +120,9 @@
     }
 }{
     \end{adjustwidth}
-} % new environment for one column entries
+}
 
+% New environment for two column entries
 \newenvironment{twocolentry}[2][]{
     \onecolentry
     \def\secondColumn{#2}
@@ -134,8 +132,9 @@
     \switchcolumn \raggedleft \secondColumn
     \end{paracol}
     \endonecolentry
-} % new environment for two column entries
+}
 
+% New environment for three column entries
 \newenvironment{threecolentry}[3][]{
     \onecolentry
     \def\thirdColumn{#3}
@@ -146,72 +145,81 @@
     \switchcolumn \raggedleft \thirdColumn
     \end{paracol}
     \endonecolentry
-} % new environment for three column entries
+}
 
+% New environment for the header
 \newenvironment{header}{
     \setlength{\topsep}{0pt}\par\kern\topsep\centering\color{primaryColor}\linespread{1.5}
 }{
     \par\kern\topsep
-} % new environment for the header
+}
 
+% --- Last Updated Text ---
 \newcommand{\placelastupdatedtext}{% \placetextbox{<horizontal pos>}{<vertical pos>}{<stuff>}
   \AddToShipoutPictureFG*{% Add <stuff> to current page foreground
     \put(
         \LenToUnit{\paperwidth-2 cm-0.2 cm+0.05cm},
         \LenToUnit{\paperheight-1.0 cm}
     ){\vtop{{\null}\makebox[0pt][c]{
-        \small\color{gray}\textit{Last updated in September 2024}\hspace{\widthof{Last updated in September 2024}}
+        \small\color{gray}\textit{Last updated in November 2024}\hspace{\widthof{Last updated in November 2024}}
     }}}%
   }%
 }%
 
-% save the original href command in a new command:
-\let\hrefWithoutArrow\href
 
-% new command for external links:
+% --- Hyperlink Redefinition ---
+\let\hrefWithoutArrow\href
 \renewcommand{\href}[2]{\hrefWithoutArrow{#1}{\ifthenelse{\equal{#2}{}}{ }{#2 }\raisebox{.15ex}{\footnotesize \faExternalLink*}}}
 
 
+% ----- Main Document -----
 \begin{document}
-    \newcommand{\AND}{\unskip
-        \cleaders\copy\ANDbox\hskip\wd\ANDbox
-        \ignorespaces
-    }
-    \newsavebox\ANDbox
-    \sbox\ANDbox{}
 
-    \placelastupdatedtext
-    \begin{header}
-        \fontsize{30 pt}{30 pt}
-        \textbf{John Doe}
+\newcommand{\AND}{\unskip                       % Define a custom horizontal separator command
+    \cleaders\copy\ANDbox\hskip\wd\ANDbox
+    \ignorespaces
+}
 
-        \vspace{0.3 cm}
+\newsavebox\ANDbox                              % Create a reusable empty box for the separator
+\sbox\ANDbox{}                                  % Define the box (currently empty; customizable later)
 
-        \normalsize
-        \mbox{{\footnotesize\faMapMarker*}\hspace*{0.13cm}Your Location}%
-        \kern 0.25 cm%
-        \AND%
-        \kern 0.25 cm%
-        \mbox{\hrefWithoutArrow{mailto:youremail@yourdomain.com}{{\footnotesize\faEnvelope[regular]}\hspace*{0.13cm}youremail@yourdomain.com}}%
-        \kern 0.25 cm%
-        \AND%
-        \kern 0.25 cm%
-        \mbox{\hrefWithoutArrow{tel:+90-541-999-99-99}{{\footnotesize\faPhone*}\hspace*{0.13cm}0541 999 99 99}}%
-        \kern 0.25 cm%
-        \AND%
-        \kern 0.25 cm%
-        \mbox{\hrefWithoutArrow{https://yourwebsite.com/}{{\footnotesize\faLink}\hspace*{0.13cm}yourwebsite.com}}%
-        \kern 0.25 cm%
-        \AND%
-        \kern 0.25 cm%
-        \mbox{\hrefWithoutArrow{https://linkedin.com/in/yourusername}{{\footnotesize\faLinkedinIn}\hspace*{0.13cm}yourusername}}%
-        \kern 0.25 cm%
-        \AND%
-        \kern 0.25 cm%
-        \mbox{\hrefWithoutArrow{https://github.com/yourusername}{{\footnotesize\faGithub}\hspace*{0.13cm}yourusername}}%
-    \end{header}
+\placelastupdatedtext                           % Add "Last updated" text to the document
 
-    \vspace{0.3 cm - 0.3 cm}
+% ---- Header ----
+\begin{header}
+
+  % ---- Name ----
+  \fontsize{30 pt}{30 pt}
+  \textbf{Ritesh Bachhar}
+  \vspace{0.3 cm}
+  \normalsize % Set normal font size for the following text
+
+  % ---- Location ----
+  \mbox{{\footnotesize\faMapMarker*}\hspace*{0.13cm}RI, USA}%
+  \kern 0.25 cm%
+  \AND%
+  \kern 0.25 cm%
+  \mbox{\hrefWithoutArrow{mailto:riteshbachhar@uri.edu}{{\footnotesize\faEnvelope[regular]}\hspace*{0.13cm}riteshbachhar@uri.edu}}%
+  \kern 0.25 cm%
+  \AND%
+  \kern 0.25 cm%
+  \mbox{\hrefWithoutArrow{mailto:riteshbachhar@gmail.com}{{\footnotesize\faEnvelope[regular]}\hspace*{0.13cm}riteshbachhar@gmail.com}}%
+  % \mbox{\hrefWithoutArrow{tel:+90-541-999-99-99}{{\footnotesize\faPhone*}\hspace*{0.13cm}0541 999 99 99}}%
+  \kern 0.25 cm%
+  \AND%
+  \kern 0.25 cm%
+  \mbox{\hrefWithoutArrow{https://yourwebsite.com/}{{\footnotesize\faLink}\hspace*{0.13cm}yourwebsite.com}}%
+  \kern 0.25 cm%
+  \AND%
+  \kern 0.25 cm%
+  \mbox{\hrefWithoutArrow{https://linkedin.com/in/yourusername}{{\footnotesize\faLinkedinIn}\hspace*{0.13cm}yourusername}}%
+  \kern 0.25 cm%
+  \AND%
+  \kern 0.25 cm%
+  \mbox{\hrefWithoutArrow{https://github.com/yourusername}{{\footnotesize\faGithub}\hspace*{0.13cm}yourusername}}%
+\end{header}
+
+\vspace{0.3 cm - 0.3 cm}
 
 
     \section{Welcome to RenderCV!}
