Update research interest

--- a/ritesh_cv.tex
+++ b/ritesh_cv.tex
@@ -195,10 +195,11 @@
   \normalsize % Set normal font size for the following text
 
   % ---- Location ----
-  \mbox{{\footnotesize\faMapMarker*}\hspace*{0.13cm}RI, USA}%
+  \mbox{{\footnotesize\faMapMarker*}\hspace*{0.13cm}RI, USA}
   \kern 0.25 cm%
   \AND%
   \kern 0.25 cm%
+  % ---- Contact Information ----
   \mbox{\hrefWithoutArrow{mailto:riteshbachhar@uri.edu}{{\footnotesize\faEnvelope[regular]}\hspace*{0.13cm}riteshbachhar@uri.edu}}%
   \kern 0.25 cm%
   \AND%
@@ -206,40 +207,47 @@
   \mbox{\hrefWithoutArrow{mailto:riteshbachhar@gmail.com}{{\footnotesize\faEnvelope[regular]}\hspace*{0.13cm}riteshbachhar@gmail.com}}%
   % \mbox{\hrefWithoutArrow{tel:+90-541-999-99-99}{{\footnotesize\faPhone*}\hspace*{0.13cm}0541 999 99 99}}%
   \kern 0.25 cm%
+  % ---- Personal website ----
   \AND%
   \kern 0.25 cm%
-  \mbox{\hrefWithoutArrow{https://yourwebsite.com/}{{\footnotesize\faLink}\hspace*{0.13cm}yourwebsite.com}}%
+  \mbox{\hrefWithoutArrow{https://riteshbachhar.com}{{\footnotesize\faLink}\hspace*{0.13cm}riteshbachhar.com}}%
+  \kern 0.25 cm%
+  \AND%
+  % ---- LinkedIn and GitHub ----
+  \kern 0.25 cm%
+  \mbox{\hrefWithoutArrow{https://inspirehep.net/authors/2160749?ui-citation-summary=true}{{\footnotesize\aiInspire}\hspace*{0.13cm}InspireHEP}}%
   \kern 0.25 cm%
   \AND%
   \kern 0.25 cm%
-  \mbox{\hrefWithoutArrow{https://linkedin.com/in/yourusername}{{\footnotesize\faLinkedinIn}\hspace*{0.13cm}yourusername}}%
+  \mbox{\hrefWithoutArrow{https://scholar.google.com/citations?user=rqhoVfgAAAAJ&hl=en&authuser=1}{{\footnotesize\aiGoogleScholar}\hspace*{0.13cm}Google Scholar}}%
   \kern 0.25 cm%
   \AND%
   \kern 0.25 cm%
-  \mbox{\hrefWithoutArrow{https://github.com/yourusername}{{\footnotesize\faGithub}\hspace*{0.13cm}yourusername}}%
+  \mbox{\hrefWithoutArrow{https://github.com/riteshbachhar}{{\footnotesize\faGithub}\hspace*{0.13cm}GitHub}}%
 \end{header}
 
 \vspace{0.3 cm - 0.3 cm}
 
+% ----- Research Interests -----
+\section{Research Interests}
+  \begin{onecolentry}
+    General relativity~(GR), Surrogate models of gravitational waves, Gravitational wave parameter estimation, Black hole merger phenomenology, point-particle black hole perturbation theory
+  \end{onecolentry}
 
-    \section{Welcome to RenderCV!}
+% ---------- Education ----------
+\section{Education}
+  \begin{threecolentry}{\textbf{BS}}{
+      Sept 2000 – May 2005
+  }
+    \textbf{University of Pennsylvania}, Computer Science
+    \begin{highlights}
+        \item GPA: 3.9/4.0 (\href{https://example.com}{a link to somewhere})
+        \item \textbf{Coursework:} Computer Architecture, Comparison of Learning Algorithms, Computational Theory
+    \end{highlights}
+  \end{threecolentry} 
 
 
-
-        
-        \begin{onecolentry}
-            \href{https://rendercv.com}{RenderCV} is a LaTeX-based CV/resume version-control and maintenance app. It allows you to create a high-quality CV or resume as a PDF file from a YAML file, with \textbf{Markdown syntax support} and \textbf{complete control over the LaTeX code}.
-        \end{onecolentry}
-
-        \vspace{0.2 cm}
-
-        \begin{onecolentry}
-            The boilerplate content was inspired by \href{https://github.com/dnl-blkv/mcdowell-cv}{Gayle McDowell}.
-        \end{onecolentry}
-
-
-    
-    \section{Quick Guide}
+\section{Quick Guide} 
 
     \begin{onecolentry}
         \begin{highlightsforbulletentries}
@@ -257,20 +265,7 @@
         \end{highlightsforbulletentries}
     \end{onecolentry}
 
-    \section{Education}
 
-
-
-        
-        \begin{threecolentry}{\textbf{BS}}{
-            Sept 2000 – May 2005
-        }
-            \textbf{University of Pennsylvania}, Computer Science
-            \begin{highlights}
-                \item GPA: 3.9/4.0 (\href{https://example.com}{a link to somewhere})
-                \item \textbf{Coursework:} Computer Architecture, Comparison of Learning Algorithms, Computational Theory
-            \end{highlights}
-        \end{threecolentry}
 
 
     
