--- a/ritesh_cv.tex
+++ b/ritesh_cv.tex
@@ -138,7 +138,7 @@
 \newenvironment{threecolentry}[3][]{
     \onecolentry
     \def\thirdColumn{#3}
-    \setcolumnwidth{1 cm, \fill, 4.5 cm}
+    \setcolumnwidth{2.5 cm, \fill, 4.5 cm}
     \begin{paracol}{3}
     {\raggedright #2} \switchcolumn
 }{
@@ -236,13 +236,33 @@
 
 % ---------- Education ----------
 \section{Education}
-  \begin{threecolentry}{\textbf{BS}}{
-      Sept 2000 – May 2005
+  \begin{threecolentry}{\textbf{Ph.D.,}}{
+    September 2021 - Present
   }
-    \textbf{University of Pennsylvania}, Computer Science
+    University of Rhode Island, Kingston, RI, USA
+  \begin{highlights}
+      \item CPI: 3.99/4.0
+      \item Advisor: Dr. Gaurav Khanna
+  \end{highlights}
+\end{threecolentry}
+
+  \begin{threecolentry}{\textbf{M.Sc. Physics,}}{
+    July 2018 - June, 2020
+  }
+    Indian Institute of Technology Bombay, Mumbai, India
+  \begin{highlights}
+      \item CPI: 9.17/10
+      \item Advisor:
+      \item Thesis: 
+  \end{highlights}
+\end{threecolentry} 
+
+  \begin{threecolentry}{\textbf{B.Sc. Physics,}}{
+    July 2014 - April 2017
+  }
+    Scottish Church College, Kolkata, India
     \begin{highlights}
-        \item GPA: 3.9/4.0 (\href{https://example.com}{a link to somewhere})
-        \item \textbf{Coursework:} Computer Architecture, Comparison of Learning Algorithms, Computational Theory
+        \item \textbf{Coursework:} Classical Mechanics, Quantum Mechanics, Electrodynamics, Statistical Mechanics, Thermodynamics, Mathematical Physics, Electronics, and Optics
     \end{highlights}
   \end{threecolentry} 
 
