--- a/ritesh_cv.tex
+++ b/ritesh_cv.tex
@@ -240,50 +240,47 @@
     September 2021 - Present
   }
     University of Rhode Island, Kingston, RI, USA
-  \begin{highlights}
+    \begin{highlights}
       \item CPI: 3.99/4.0
       \item Advisor: Dr. Gaurav Khanna
-  \end{highlights}
-\end{threecolentry}
+    \end{highlights}
+  \end{threecolentry}
 
-  \begin{threecolentry}{\textbf{M.Sc. Physics,}}{
+\begin{threecolentry}{\textbf{M.Sc. Physics,}}{
     July 2018 - June, 2020
   }
     Indian Institute of Technology Bombay, Mumbai, India
   \begin{highlights}
-      \item CPI: 9.17/10
-      \item Advisor:
-      \item Thesis: 
+    \item CPI: 9.17/10
+    \item Advisor: Dr. Varun Bhalerao
+    \item Thesis: Phase resolved analysis of Centaurus X-3
   \end{highlights}
 \end{threecolentry} 
 
-  \begin{threecolentry}{\textbf{B.Sc. Physics,}}{
-    July 2014 - April 2017
-  }
-    Scottish Church College, Kolkata, India
-    \begin{highlights}
-        \item \textbf{Coursework:} Classical Mechanics, Quantum Mechanics, Electrodynamics, Statistical Mechanics, Thermodynamics, Mathematical Physics, Electronics, and Optics
-    \end{highlights}
-  \end{threecolentry} 
+\begin{threecolentry}{\textbf{B.Sc. Physics,}}{
+  July 2014 - April 2017
+}
+  Scottish Church College, Kolkata, India
+  \begin{highlights}
+      \item \textbf{Coursework:} Classical Mechanics, Quantum Mechanics, Electrodynamics, Statistical Mechanics, Thermodynamics, Mathematical Physics, Electronics, and Optics
+  \end{highlights}
+\end{threecolentry}
 
 
-\section{Quick Guide} 
+% ---------- Awards & Honors ----------
+\section{Awards} 
 
-    \begin{onecolentry}
-        \begin{highlightsforbulletentries}
+  \begin{onecolentry}
+    \begin{highlightsforbulletentries}
+      \item \textbf{Dean's Fellowship}, University of Rhode Island, 2024-2025.
 
+      \item NASA travel grant of \$1500 for attending the 15th LISA Symposium, Dublin, Ireland, 2024.
 
-        \item Each section title is arbitrary and each section contains a list of entries.
+      \item \textbf{Bhavesh Gandhi Memorial Prize}(2019-20), IIT Bombay, for best M.Sc. thesis.
 
-        \item There are 7 unique entry types: \textit{BulletEntry}, \textit{TextEntry}, \textit{EducationEntry}, \textit{ExperienceEntry}, \textit{NormalEntry}, \textit{PublicationEntry}, and \textit{OneLineEntry}.
-
-        \item Select a section title, pick an entry type, and start writing your section!
-
-        \item \href{https://docs.rendercv.com/user_guide/}{Here}, you can find a comprehensive user guide for RenderCV.
-
-
-        \end{highlightsforbulletentries}
-    \end{onecolentry}
+      \item Qualified \textbf{CSIR NET} June 2019 with \textbf{AIR 66} and eligible for Junior Research Fellowship.
+    \end{highlightsforbulletentries}
+  \end{onecolentry}
 
 
 
