--- a/ritesh_cv.tex
+++ b/ritesh_cv.tex
@@ -269,58 +269,67 @@
 
 % ---------- Awards & Honors ----------
 \section{Awards} 
+\begin{onecolentry}
+  \begin{highlightsforbulletentries}
+    \item \textbf{Dean's Fellowship}, University of Rhode Island
 
-  \begin{onecolentry}
-    \begin{highlightsforbulletentries}
-      \item \textbf{Dean's Fellowship}, University of Rhode Island, 2024-2025.
+    \item NASA travel grant of \$1500 for attending the 15th LISA Symposium, Dublin, Ireland, 2024.
 
-      \item NASA travel grant of \$1500 for attending the 15th LISA Symposium, Dublin, Ireland, 2024.
+    \item \textbf{Bhavesh Gandhi Memorial Prize}(2019-20), IIT Bombay, for best M.Sc. thesis.
 
-      \item \textbf{Bhavesh Gandhi Memorial Prize}(2019-20), IIT Bombay, for best M.Sc. thesis.
-
-      \item Qualified \textbf{CSIR NET} June 2019 with \textbf{AIR 66} and eligible for Junior Research Fellowship.
-    \end{highlightsforbulletentries}
-  \end{onecolentry}
-
+    \item Qualified \textbf{CSIR NET} June 2019 with \textbf{AIR 66} and eligible for Junior Research Fellowship.
+  \end{highlightsforbulletentries}
+\end{onecolentry}
 
 
+% ---------- Employment ----------
+\section{Employment} 
+\begin{onecolentry}
+  \begin{highlightsforbulletentries}
+    \item \textbf{Dean's Fellow}, University of Rhode Island, Fall 2024 - Summer 2025
+    \item \textbf{Research Assistant}, University of Rhode Island, Fall 2022 - Spring 2024
+    \item \textbf{Teaching Assistant}, University of Rhode Island, Fall 2021 - Spring 2022
+  \end{highlightsforbulletentries}
+\end{onecolentry}
 
+
+
+% ---------- Experience ----------
+% ---------- Publications ----------
+
+
+% ---------- Experience ----------    
+\section{Experience}
+\begin{twocolentry}{
+    Cupertino, CA 
     
-    \section{Experience}
+    June 2005 – Aug 2007
+}
+    \textbf{Apple}, Software Engineer
+    \begin{highlights}
+        \item Reduced time to render user buddy lists by 75\% by implementing a prediction algorithm
+        \item Integrated iChat with Spotlight Search by creating a tool to extract metadata from saved chat transcripts and provide metadata to a system-wide search database
+        \item Redesigned chat file format and implemented backward compatibility for search
+    \end{highlights}
+\end{twocolentry}
 
 
+\vspace{0.2 cm}
 
-        
-        \begin{twocolentry}{
-            Cupertino, CA
+\begin{twocolentry}{
+    Redmond, WA
 
-        June 2005 – Aug 2007
-        }
-            \textbf{Apple}, Software Engineer
-            \begin{highlights}
-                \item Reduced time to render user buddy lists by 75\% by implementing a prediction algorithm
-                \item Integrated iChat with Spotlight Search by creating a tool to extract metadata from saved chat transcripts and provide metadata to a system-wide search database
-                \item Redesigned chat file format and implemented backward compatibility for search
-            \end{highlights}
-        \end{twocolentry}
-
-
-        \vspace{0.2 cm}
-
-        \begin{twocolentry}{
-            Redmond, WA
-
-        June 2003 – Aug 2003
-        }
-            \textbf{Microsoft}, Software Engineer Intern
-            \begin{highlights}
-                \item Designed a UI for the VS open file switcher (Ctrl-Tab) and extended it to tool windows
-                \item Created a service to provide gradient across VS and VS add-ins, optimizing its performance via caching
-                \item Built an app to compute the similarity of all methods in a codebase, reducing the time from $\mathcal{O}(n^2)$ to $\mathcal{O}(n \log n)$
-                \item Created a test case generation tool that creates random XML docs from XML Schema
-                \item Automated the extraction and processing of large datasets from legacy systems using SQL and Perl scripts
-            \end{highlights}
-        \end{twocolentry}
+June 2003 – Aug 2003
+}
+    \textbf{Microsoft}, Software Engineer Intern
+    \begin{highlights}
+        \item Designed a UI for the VS open file switcher (Ctrl-Tab) and extended it to tool windows
+        \item Created a service to provide gradient across VS and VS add-ins, optimizing its performance via caching
+        \item Built an app to compute the similarity of all methods in a codebase, reducing the time from $\mathcal{O}(n^2)$ to $\mathcal{O}(n \log n)$
+        \item Created a test case generation tool that creates random XML docs from XML Schema
+        \item Automated the extraction and processing of large datasets from legacy systems using SQL and Perl scripts
+    \end{highlights}
+\end{twocolentry}
 
 
 
